--- a/style.css
+++ b/style.css
@@ -95,6 +95,12 @@ nav ul li button:hover {
     cursor: pointer;
 }
 
+#header a {
+    text-decoration: none;
+    color: white;
+    font-size: larger;
+}
+
 /* mission section */
 .subtitle {
     text-align: center;
